@@ -4,10 +4,14 @@
  * External dependencies
  */
 import { dateI18n } from '@wordpress/date';
-import { __ } from '@wordpress/i18n';
+import { __, sprintf } from '@wordpress/i18n';
 import moment from 'moment';
-import { OrderStatus } from '@woocommerce/components';
-import { Card, CardBody } from '@wordpress/components';
+import {
+	SummaryListPlaceholder,
+	SummaryList,
+	OrderStatus,
+} from '@woocommerce/components';
+import classNames from 'classnames';
 
 /**
  * Internal dependencies.
@@ -16,7 +20,6 @@ import { useDeposit } from 'data';
 import { displayStatus } from '../strings';
 import TransactionsList from 'transactions/list';
 import Page from 'components/page';
-import Loadable from 'components/loadable';
 import { TestModeNotice, topics } from 'components/test-mode-notice';
 import { formatCurrency } from 'utils/currency';
 import './style.scss';
@@ -26,60 +29,99 @@ const Status = ( { status } ) => (
 	<OrderStatus order={ { status } } orderStatusMap={ displayStatus } />
 );
 
+// Custom SummaryNumber with custom value className reusing @woocommerce/components styles.
+const SummaryItem = ( { label, value, valueClass, detail } ) => (
+	<li className="woocommerce-summary__item-container">
+		<div className="woocommerce-summary__item">
+			<div className="woocommerce-summary__item-label">{ label }</div>
+			<div className="woocommerce-summary__item-data">
+				<div
+					className={ classNames(
+						'woocommerce-summary__item-value',
+						valueClass
+					) }
+				>
+					{ value }
+				</div>
+			</div>
+			{ detail && (
+				<div className="wcpay-summary__item-detail">{ detail }</div>
+			) }
+		</div>
+	</li>
+);
+
 export const DepositOverview = ( { depositId } ) => {
 	const { deposit = {}, isLoading } = useDeposit( depositId );
 
-	return (
-		<Card className="wcpay-deposit-overview">
-			<CardBody>
-				<div className="wcpay-deposit-detail">
-					<div className="wcpay-deposit-date">
-						<Loadable
-							isLoading={ isLoading }
-							placeholder="Date placeholder"
-						>
-							{ `${ __(
-								'Deposit date',
-								'woocommerce-payments'
-							) }: ` }
-							{ dateI18n(
-								'M j, Y',
-								moment.utc( deposit.date ).toISOString(),
-								true // TODO Change call to gmdateI18n and remove this deprecated param once WP 5.4 support ends.
-							) }
-						</Loadable>
-					</div>
-					<div className="wcpay-deposit-status">
-						<Loadable isLoading={ isLoading } placeholder="Status">
-							<Status status={ deposit.status } />
-						</Loadable>
-					</div>
-					<div className="wcpay-deposit-bank-account">
-						<Loadable
-							isLoading={ isLoading }
-							placeholder="Bank account placeholder"
-						>
-							{ deposit.bankAccount }
-						</Loadable>
-					</div>
-				</div>
+	const depositDateLabel = deposit.automatic
+		? __( 'Deposit date', 'woocommerce-payments' )
+		: __( 'Instant deposit date', 'woocommerce-payments' );
 
-				<div className="wcpay-deposit-hero">
-					<div className="wcpay-deposit-amount">
-						<Loadable
-							isLoading={ isLoading }
-							placeholder="Amount"
-							display="inline"
-						>
-							{ formatCurrency(
+	return (
+		<div className="wcpay-deposit-overview">
+			{ isLoading ? (
+				<SummaryListPlaceholder numberOfItems={ 4 } />
+			) : (
+				<SummaryList
+					label={ __( 'Deposits overview', 'woocommerce-payments' ) }
+				>
+					{ () => [
+						<SummaryItem
+							key="depositDate"
+							label={
+								`${ depositDateLabel }: ` +
+								dateI18n(
+									'M j, Y',
+									moment.utc( deposit.date ).toISOString(),
+									true // TODO Change call to gmdateI18n and remove this deprecated param once WP 5.4 support ends.
+								)
+							}
+							value={ <Status status={ deposit.status } /> }
+							detail={ deposit.bankAccount }
+						/>,
+						<SummaryItem
+							key="depositAmount"
+							label={ __(
+								'Deposit amount',
+								'woocommerce-payments'
+							) }
+							value={ formatCurrency(
+								deposit.amount + deposit.fee,
+								deposit.currency
+							) }
+						/>,
+						<SummaryItem
+							key="depositFees"
+							label={ sprintf(
+								/* translators: %s - amount representing the fee percentage */
+								__( '%s service fee', 'woocommerce-payments' ),
+								`${ deposit.fee_percentage }%`
+							) }
+							value={ formatCurrency(
+								deposit.fee,
+								deposit.currency
+							) }
+							valueClass={
+								0 < deposit.fee && 'wcpay-deposit-fee'
+							}
+						/>,
+						<SummaryItem
+							key="netDepositAmount"
+							label={ __(
+								'Net deposit amount',
+								'woocommerce-payments'
+							) }
+							value={ formatCurrency(
 								deposit.amount,
 								deposit.currency
 							) }
-						</Loadable>
-					</div>
-				</div>
-			</CardBody>
-		</Card>
+							valueClass="wcpay-deposit-net"
+						/>,
+					] }
+				</SummaryList>
+			) }
+		</div>
 	);
 };
 
