@@ -3,47 +3,124 @@
 exports[`Deposit overview renders correctly 1`] = `
 <div>
   <div
-    class="components-card is-size-medium wcpay-deposit-overview css-1xs3c37-CardUI e1q7k77g0"
+    class="wcpay-deposit-overview"
   >
     <div
-      class="components-card__body is-size-medium css-xmjzce-BodyUI e1q7k77g3"
+      aria-describedby="woocommerce-summary-helptext-1"
+      aria-label="Deposits overview"
+      aria-orientation="horizontal"
+      role="menu"
     >
-      <div
-        class="wcpay-deposit-detail"
+      <p
+        class="screen-reader-text"
+        id="woocommerce-summary-helptext-1"
       >
-        <div
-          class="wcpay-deposit-date"
-        >
-          Deposit date: 
-          Jan 2, 2020
-        </div>
-        <div
-          class="wcpay-deposit-status"
+        List of data points available for filtering. Use arrow keys to cycle through the list. Click a data point for a detailed report.
+      </p>
+      <ul
+        class="woocommerce-summary has-4-items"
+      >
+        <li
+          class="woocommerce-summary__item-container"
         >
           <div
-            class="woocommerce-order-status"
+            class="woocommerce-summary__item"
           >
-            <span
-              class="woocommerce-order-status__indicator is-paid"
-            />
-            Paid
+            <div
+              class="woocommerce-summary__item-label"
+            >
+              Deposit date: Jan 2, 2020
+            </div>
+            <div
+              class="woocommerce-summary__item-data"
+            >
+              <div
+                class="woocommerce-summary__item-value"
+              >
+                <div
+                  class="woocommerce-order-status"
+                >
+                  <span
+                    class="woocommerce-order-status__indicator is-paid"
+                  />
+                  Paid
+                </div>
+              </div>
+            </div>
+            <div
+              class="wcpay-summary__item-detail"
+            >
+              MOCK BANK •••• 1234 (USD)
+            </div>
           </div>
-        </div>
-        <div
-          class="wcpay-deposit-bank-account"
+        </li>
+        <li
+          class="woocommerce-summary__item-container"
         >
-          MOCK BANK •••• 1234 (USD)
-        </div>
-      </div>
-      <div
-        class="wcpay-deposit-hero"
-      >
-        <div
-          class="wcpay-deposit-amount"
+          <div
+            class="woocommerce-summary__item"
+          >
+            <div
+              class="woocommerce-summary__item-label"
+            >
+              Deposit amount
+            </div>
+            <div
+              class="woocommerce-summary__item-data"
+            >
+              <div
+                class="woocommerce-summary__item-value"
+              >
+                $20.30
+              </div>
+            </div>
+          </div>
+        </li>
+        <li
+          class="woocommerce-summary__item-container"
         >
-          $20.00
-        </div>
-      </div>
+          <div
+            class="woocommerce-summary__item"
+          >
+            <div
+              class="woocommerce-summary__item-label"
+            >
+              undefined% service fee
+            </div>
+            <div
+              class="woocommerce-summary__item-data"
+            >
+              <div
+                class="woocommerce-summary__item-value wcpay-deposit-fee"
+              >
+                $0.30
+              </div>
+            </div>
+          </div>
+        </li>
+        <li
+          class="woocommerce-summary__item-container"
+        >
+          <div
+            class="woocommerce-summary__item"
+          >
+            <div
+              class="woocommerce-summary__item-label"
+            >
+              Net deposit amount
+            </div>
+            <div
+              class="woocommerce-summary__item-data"
+            >
+              <div
+                class="woocommerce-summary__item-value wcpay-deposit-net"
+              >
+                $20.00
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
