@@ -27,32 +27,4 @@
 			fill: $gray-50;
 		}
 	}
-	.woocommerce-summary {
-		.woocommerce-summary__item-label {
-			margin-bottom: 12px;
-		}
-		.woocommerce-summary__item-data {
-			margin-top: 0;
-			margin-bottom: 8px;
-		}
-		.wcpay-deposits-summary__item-detail {
-			color: $dark-gray-500;
-		}
-		/* Hide unused SummaryNumber fields */
-		.woocommerce-summary__item-prev-value,
-		.woocommerce-summary__item-delta {
-			display: none;
-		}
-	}
-	.woocommerce-summary__item {
-		background: $studio-white;
-	}
-	a.woocommerce-summary__item {
-		&:hover {
-			background-color: $studio-gray-0;
-		}
-		&:active {
-			background-color: $studio-gray-5;
-		}
-	}
 }
